--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,4 +8,13 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    <jsp-config>
+        <jsp-property-group>
+            <display-name>template1</display-name>
+            <url-pattern>/index.jsp</url-pattern>
+            <url-pattern>/showLogin.jsp</url-pattern>
+            <include-prelude>/WEB-INF/jspf/header.jspf</include-prelude>
+            <include-coda>/WEB-INF/jspf/footer.jspf</include-coda>
+        </jsp-property-group>
+    </jsp-config>
 </web-app>
